--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -83,6 +83,42 @@ cc_test(
 )
 
 cc_library(
+    name = "extensions",
+    srcs = ["extensions.cc"],
+    hdrs = ["extensions.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "//cc/google/fhir:extensions",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//proto/r4/core:datatypes_cc_proto",
+        "@com_google_protobuf//:protobuf",
+    ],
+)
+
+cc_test(
+    name = "extensions_test",
+    srcs = ["extensions_test.cc"],
+    data = [
+        "//testdata/r4:google",
+    ],
+    deps = [
+        ":extensions",
+        "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/r4:google_extensions_cc_proto",
+        "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core:extensions_cc_proto",
+        "//proto/r4/core/resources:composition_cc_proto",
+        "//testdata/r4/profiles:test_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+        "@org_tensorflow//tensorflow/core:lib",
+        "@org_tensorflow//tensorflow/core:test",
+    ],
+)
+
+cc_library(
     name = "primitive_handler",
     srcs = ["primitive_handler.cc"],
     hdrs = ["primitive_handler.h"],
