Makes the JsonPrinter not error out if it encounters an Any it can't unpack, and instead makes it drop the any.
PiperOrigin-RevId: 293385273

--- a/testdata/r4/BUILD
+++ b/testdata/r4/BUILD
@@ -16,7 +16,7 @@ filegroup(
 filegroup(
     name = "examples",
     srcs = glob([
-        "examples/*.prototxt",
+        "examples/*",
     ]),
 )
 
