Add support for SimpleQuantity and UnsignedInt comparison. This unblocks enabling FHIRPath validation in json_format_r4_test, which provides significantly more test coverage for FHIRPath expressions.
PiperOrigin-RevId: 293640431

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -98,7 +98,9 @@ cc_test(
         "//proto/r4/core:codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:encounter_cc_proto",
+        "//proto/r4/core/resources:medication_knowledge_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:parameters_cc_proto",
         "//proto/r4/core/resources:structure_definition_cc_proto",
         "//proto/r4/core/resources:value_set_cc_proto",
         "@com_google_absl//absl/strings",
