Abstracts primitive handling behind a version-agnostic handler, to eliminate core dependencies on specific versions
PiperOrigin-RevId: 294288890

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -140,6 +140,7 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":annotations",
+        ":primitive_handler",
         ":primitive_wrapper",
         ":proto_util",
         ":util",
@@ -152,42 +153,6 @@ cc_library(
         "@com_google_absl//absl/strings",
         "@com_google_protobuf//:protobuf",
         "@org_tensorflow//tensorflow/core:lib",
-    ],
-)
-
-cc_test(
-    name = "resource_validation_stu3_test",
-    srcs = ["resource_validation_stu3_test.cc"],
-    deps = [
-        ":resource_validation",
-        ":test_helper",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
-        "@com_google_googletest//:gtest_main",
-        "@com_google_protobuf//:protobuf",
-        "@org_tensorflow//tensorflow/core:lib",
-        "@org_tensorflow//tensorflow/core:test",
-    ],
-)
-
-cc_test(
-    name = "resource_validation_r4_test",
-    srcs = ["resource_validation_r4_test.cc"],
-    data = [
-        "//testdata/r4:validation",
-    ],
-    deps = [
-        ":resource_validation",
-        ":test_helper",
-        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
-        "//proto/r4/core/resources:encounter_cc_proto",
-        "//proto/r4/core/resources:observation_cc_proto",
-        "//proto/r4/core/resources:questionnaire_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_googletest//:gtest_main",
-        "@com_google_protobuf//:protobuf",
-        "@org_tensorflow//tensorflow/core:lib",
-        "@org_tensorflow//tensorflow/core:test",
     ],
 )
 
@@ -228,9 +193,13 @@ cc_library(
     deps = [
         ":annotations",
         ":resource_validation",
+        "//cc/google/fhir/r4:primitive_handler",
         "//cc/google/fhir/r4:profiles",
+        "//cc/google/fhir/r4:resource_validation",
         "//cc/google/fhir/status",
+        "//cc/google/fhir/stu3:primitive_handler",
         "//cc/google/fhir/stu3:profiles",
+        "//cc/google/fhir/stu3:resource_validation",
         "//proto:annotations_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest",
@@ -277,7 +246,6 @@ cc_library(
     name = "primitive_wrapper",
     srcs = [
         "primitive_wrapper.cc",
-        "primitive_wrapper.h",
     ],
     hdrs = [
         "primitive_wrapper.h",
@@ -307,6 +275,7 @@ cc_library(
     ],
 )
 
+# TODO: eliminate version-specific deps
 cc_library(
     name = "json_format",
     srcs = [
@@ -323,6 +292,7 @@ cc_library(
         ":core_resource_registry",
         ":extensions",
         ":fhir_types",
+        ":primitive_handler",
         ":primitive_wrapper",
         ":proto_util",
         ":resource_validation",
@@ -343,225 +313,6 @@ cc_library(
         "@com_googlesource_code_re2//:re2",
         "@jsoncpp_git//:jsoncpp",
         "@org_tensorflow//tensorflow/core:lib",
-    ],
-)
-
-cc_test(
-    name = "json_format_stu3_test",
-    srcs = ["json_format_stu3_test.cc"],
-    data = [
-        "//spec:stu3",
-        "//testdata/stu3:bigquery",
-        "//testdata/stu3:examples",
-        "//testdata/stu3:ndjson",
-        "//testdata/stu3:profiles",
-    ],
-    deps = [
-        ":json_format",
-        ":test_helper",
-        "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
-        "//testdata/stu3/profiles:test_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_googletest//:gtest_main",
-        "@com_google_protobuf//:protobuf",
-        "@jsoncpp_git//:jsoncpp",
-    ],
-)
-
-cc_test(
-    name = "json_format_r4_test",
-    size = "large",
-    srcs = ["json_format_r4_test.cc"],
-    data = [
-        "//spec:r4_examples",
-        "//testdata/r4:bigquery",
-        "//testdata/r4:examples",
-        "//testdata/r4/profiles:testdata",
-    ],
-    shard_count = 10,
-    deps = [
-        ":json_format",
-        ":test_helper",
-        "//cc/google/fhir/r4:profiles",
-        "//cc/google/fhir/testutil:proto_matchers",
-        "//proto:annotations_cc_proto",
-        "//proto/r4/core:codes_cc_proto",
-        "//proto/r4/core:datatypes_cc_proto",
-        "//proto/r4/core/profiles:observation_genetics_cc_proto",
-        "//proto/r4/core/resources:account_cc_proto",
-        "//proto/r4/core/resources:activity_definition_cc_proto",
-        "//proto/r4/core/resources:adverse_event_cc_proto",
-        "//proto/r4/core/resources:allergy_intolerance_cc_proto",
-        "//proto/r4/core/resources:appointment_cc_proto",
-        "//proto/r4/core/resources:appointment_response_cc_proto",
-        "//proto/r4/core/resources:audit_event_cc_proto",
-        "//proto/r4/core/resources:basic_cc_proto",
-        "//proto/r4/core/resources:binary_cc_proto",
-        "//proto/r4/core/resources:biologically_derived_product_cc_proto",
-        "//proto/r4/core/resources:body_structure_cc_proto",
-        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
-        "//proto/r4/core/resources:capability_statement_cc_proto",
-        "//proto/r4/core/resources:care_plan_cc_proto",
-        "//proto/r4/core/resources:care_team_cc_proto",
-        "//proto/r4/core/resources:catalog_entry_cc_proto",
-        "//proto/r4/core/resources:charge_item_cc_proto",
-        "//proto/r4/core/resources:charge_item_definition_cc_proto",
-        "//proto/r4/core/resources:claim_cc_proto",
-        "//proto/r4/core/resources:claim_response_cc_proto",
-        "//proto/r4/core/resources:clinical_impression_cc_proto",
-        "//proto/r4/core/resources:code_system_cc_proto",
-        "//proto/r4/core/resources:communication_cc_proto",
-        "//proto/r4/core/resources:communication_request_cc_proto",
-        "//proto/r4/core/resources:compartment_definition_cc_proto",
-        "//proto/r4/core/resources:composition_cc_proto",
-        "//proto/r4/core/resources:concept_map_cc_proto",
-        "//proto/r4/core/resources:condition_cc_proto",
-        "//proto/r4/core/resources:consent_cc_proto",
-        "//proto/r4/core/resources:contract_cc_proto",
-        "//proto/r4/core/resources:coverage_cc_proto",
-        "//proto/r4/core/resources:coverage_eligibility_request_cc_proto",
-        "//proto/r4/core/resources:coverage_eligibility_response_cc_proto",
-        "//proto/r4/core/resources:detected_issue_cc_proto",
-        "//proto/r4/core/resources:device_cc_proto",
-        "//proto/r4/core/resources:device_definition_cc_proto",
-        "//proto/r4/core/resources:device_metric_cc_proto",
-        "//proto/r4/core/resources:device_request_cc_proto",
-        "//proto/r4/core/resources:device_use_statement_cc_proto",
-        "//proto/r4/core/resources:diagnostic_report_cc_proto",
-        "//proto/r4/core/resources:document_manifest_cc_proto",
-        "//proto/r4/core/resources:document_reference_cc_proto",
-        "//proto/r4/core/resources:effect_evidence_synthesis_cc_proto",
-        "//proto/r4/core/resources:encounter_cc_proto",
-        "//proto/r4/core/resources:endpoint_cc_proto",
-        "//proto/r4/core/resources:enrollment_request_cc_proto",
-        "//proto/r4/core/resources:enrollment_response_cc_proto",
-        "//proto/r4/core/resources:episode_of_care_cc_proto",
-        "//proto/r4/core/resources:event_definition_cc_proto",
-        "//proto/r4/core/resources:evidence_cc_proto",
-        "//proto/r4/core/resources:evidence_variable_cc_proto",
-        "//proto/r4/core/resources:example_scenario_cc_proto",
-        "//proto/r4/core/resources:explanation_of_benefit_cc_proto",
-        "//proto/r4/core/resources:family_member_history_cc_proto",
-        "//proto/r4/core/resources:flag_cc_proto",
-        "//proto/r4/core/resources:goal_cc_proto",
-        "//proto/r4/core/resources:graph_definition_cc_proto",
-        "//proto/r4/core/resources:group_cc_proto",
-        "//proto/r4/core/resources:guidance_response_cc_proto",
-        "//proto/r4/core/resources:healthcare_service_cc_proto",
-        "//proto/r4/core/resources:imaging_study_cc_proto",
-        "//proto/r4/core/resources:immunization_cc_proto",
-        "//proto/r4/core/resources:immunization_evaluation_cc_proto",
-        "//proto/r4/core/resources:immunization_recommendation_cc_proto",
-        "//proto/r4/core/resources:implementation_guide_cc_proto",
-        "//proto/r4/core/resources:insurance_plan_cc_proto",
-        "//proto/r4/core/resources:invoice_cc_proto",
-        "//proto/r4/core/resources:library_cc_proto",
-        "//proto/r4/core/resources:linkage_cc_proto",
-        "//proto/r4/core/resources:list_cc_proto",
-        "//proto/r4/core/resources:location_cc_proto",
-        "//proto/r4/core/resources:measure_cc_proto",
-        "//proto/r4/core/resources:measure_report_cc_proto",
-        "//proto/r4/core/resources:media_cc_proto",
-        "//proto/r4/core/resources:medication_administration_cc_proto",
-        "//proto/r4/core/resources:medication_cc_proto",
-        "//proto/r4/core/resources:medication_dispense_cc_proto",
-        "//proto/r4/core/resources:medication_knowledge_cc_proto",
-        "//proto/r4/core/resources:medication_request_cc_proto",
-        "//proto/r4/core/resources:medication_statement_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_authorization_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_contraindication_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_indication_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_ingredient_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_interaction_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_manufactured_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_packaged_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_pharmaceutical_cc_proto",
-        "//proto/r4/core/resources:medicinal_product_undesirable_effect_cc_proto",
-        "//proto/r4/core/resources:message_definition_cc_proto",
-        "//proto/r4/core/resources:message_header_cc_proto",
-        "//proto/r4/core/resources:metadata_resource_cc_proto",
-        "//proto/r4/core/resources:molecular_sequence_cc_proto",
-        "//proto/r4/core/resources:naming_system_cc_proto",
-        "//proto/r4/core/resources:nutrition_order_cc_proto",
-        "//proto/r4/core/resources:observation_cc_proto",
-        "//proto/r4/core/resources:observation_definition_cc_proto",
-        "//proto/r4/core/resources:operation_definition_cc_proto",
-        "//proto/r4/core/resources:operation_outcome_cc_proto",
-        "//proto/r4/core/resources:organization_affiliation_cc_proto",
-        "//proto/r4/core/resources:organization_cc_proto",
-        "//proto/r4/core/resources:parameters_cc_proto",
-        "//proto/r4/core/resources:patient_cc_proto",
-        "//proto/r4/core/resources:payment_notice_cc_proto",
-        "//proto/r4/core/resources:payment_reconciliation_cc_proto",
-        "//proto/r4/core/resources:person_cc_proto",
-        "//proto/r4/core/resources:plan_definition_cc_proto",
-        "//proto/r4/core/resources:practitioner_cc_proto",
-        "//proto/r4/core/resources:practitioner_role_cc_proto",
-        "//proto/r4/core/resources:procedure_cc_proto",
-        "//proto/r4/core/resources:provenance_cc_proto",
-        "//proto/r4/core/resources:questionnaire_cc_proto",
-        "//proto/r4/core/resources:questionnaire_response_cc_proto",
-        "//proto/r4/core/resources:related_person_cc_proto",
-        "//proto/r4/core/resources:request_group_cc_proto",
-        "//proto/r4/core/resources:research_definition_cc_proto",
-        "//proto/r4/core/resources:research_element_definition_cc_proto",
-        "//proto/r4/core/resources:research_study_cc_proto",
-        "//proto/r4/core/resources:research_subject_cc_proto",
-        "//proto/r4/core/resources:risk_assessment_cc_proto",
-        "//proto/r4/core/resources:risk_evidence_synthesis_cc_proto",
-        "//proto/r4/core/resources:schedule_cc_proto",
-        "//proto/r4/core/resources:search_parameter_cc_proto",
-        "//proto/r4/core/resources:service_request_cc_proto",
-        "//proto/r4/core/resources:slot_cc_proto",
-        "//proto/r4/core/resources:specimen_cc_proto",
-        "//proto/r4/core/resources:specimen_definition_cc_proto",
-        "//proto/r4/core/resources:structure_definition_cc_proto",
-        "//proto/r4/core/resources:structure_map_cc_proto",
-        "//proto/r4/core/resources:subscription_cc_proto",
-        "//proto/r4/core/resources:substance_cc_proto",
-        "//proto/r4/core/resources:substance_nucleic_acid_cc_proto",
-        "//proto/r4/core/resources:substance_polymer_cc_proto",
-        "//proto/r4/core/resources:substance_protein_cc_proto",
-        "//proto/r4/core/resources:substance_reference_information_cc_proto",
-        "//proto/r4/core/resources:substance_source_material_cc_proto",
-        "//proto/r4/core/resources:substance_specification_cc_proto",
-        "//proto/r4/core/resources:supply_delivery_cc_proto",
-        "//proto/r4/core/resources:supply_request_cc_proto",
-        "//proto/r4/core/resources:task_cc_proto",
-        "//proto/r4/core/resources:terminology_capabilities_cc_proto",
-        "//proto/r4/core/resources:test_report_cc_proto",
-        "//proto/r4/core/resources:test_script_cc_proto",
-        "//proto/r4/core/resources:value_set_cc_proto",
-        "//proto/r4/core/resources:verification_result_cc_proto",
-        "//proto/r4/core/resources:vision_prescription_cc_proto",
-        "//testdata/r4/profiles:test_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_googletest//:gtest_main",
-        "@com_google_protobuf//:protobuf",
-        "@jsoncpp_git//:jsoncpp",
-    ],
-)
-
-cc_test(
-    name = "primitive_wrapper_test",
-    srcs = ["primitive_wrapper_test.cc"],
-    data = [
-        "//testdata/stu3:validation",
-    ],
-    deps = [
-        ":annotations",
-        ":json_format",
-        ":primitive_wrapper",
-        ":test_helper",
-        "//proto/stu3:codes_cc_proto",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_googletest//:gtest_main",
-        "@org_tensorflow//tensorflow/core:test",
     ],
 )
 
@@ -668,9 +419,13 @@ cc_test(
     srcs = ["fhir_types_test.cc"],
     deps = [
         ":fhir_types",
+        "//proto/r4:uscore_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core:extensions_cc_proto",
+        "//proto/r4/core/profiles:observation_bodyheight_cc_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/r4/profiles:test_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
