--- a/cc/google/fhir/examples/BUILD
+++ b/cc/google/fhir/examples/BUILD
@@ -8,7 +8,7 @@ cc_binary(
     name = "LocalProfiler",
     srcs = ["local_profiler.cc"],
     deps = [
-        "//cc/google/fhir:json_format",
+        "//cc/google/fhir/r4:json_format",
         "//cc/google/fhir/r4:profiles",
         "//examples/profiles:demo_cc_proto",
         "//proto/r4/core/resources:patient_cc_proto",
