Applied ClangTidy fixes to the FHIR C++ codebase.
PiperOrigin-RevId: 294354455

--- a/cc/google/fhir/status/BUILD
+++ b/cc/google/fhir/status/BUILD
@@ -31,6 +31,7 @@ cc_test(
     srcs = ["statusor_test.cc"],
     deps = [
         ":statusor",
+        "@com_google_absl//absl/memory",
         "@com_google_googletest//:gtest_main",
         "@org_tensorflow//tensorflow/core:lib",
     ],
