--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -87,10 +87,6 @@ cc_test(
     name = "fhir_path_test",
     size = "small",
     srcs = ["fhir_path_test.cc"],
-    copts = [
-        "-fexceptions",
-    ],
-    features = ["-use_header_modules"],  # Incompatible with -fexceptions.
     deps = [
         ":fhir_path",
         "//cc/google/fhir:proto_util",
@@ -100,12 +96,20 @@ cc_test(
         "//proto/r4:uscore_codes_cc_proto",
         "//proto/r4/core:codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/r4/core/resources:encounter_cc_proto",
         "//proto/r4/core/resources:medication_knowledge_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
         "//proto/r4/core/resources:parameters_cc_proto",
+        "//proto/r4/core/resources:patient_cc_proto",
         "//proto/r4/core/resources:structure_definition_cc_proto",
         "//proto/r4/core/resources:value_set_cc_proto",
+        "//proto/stu3:codes_cc_proto",
+        "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:metadatatypes_cc_proto",
+        "//proto/stu3:resources_cc_proto",
+        "//proto/stu3:uscore_cc_proto",
+        "//proto/stu3:uscore_codes_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@com_google_googletest//:gtest_main",
