--- a/py/google/fhir/models/BUILD
+++ b/py/google/fhir/models/BUILD
@@ -47,8 +47,11 @@ py_library(
 py_binary(
     name = "mle_task",
     srcs = ["mle_task.py"],
+    # TODO: Upgrade external users to Python 3
     python_version = "PY2",
-    deps = [":mle_task_main_lib"],
+    deps = [
+        ":mle_task_main_lib",
+    ],
 )
 
 py_library(
@@ -67,6 +70,7 @@ py_binary(
     srcs = [
         "run_locally.py",
     ],
+    # TODO: Upgrade external users to Python 3
     python_version = "PY2",
     deps = [
         ":model",
@@ -84,6 +88,7 @@ py_test(
     data = [
         "//testdata/stu3:tensorflow",
     ],
+    # TODO: Upgrade external users to Python 3
     python_version = "PY2",
     deps = [
         ":model_lib",
@@ -103,6 +108,7 @@ py_test(
     data = [
         "//testdata/stu3:tensorflow",
     ],
+    # TODO: Upgrade external users to Python 3
     python_version = "PY2",
     deps = [
         ":mle_task_main_lib",
