--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -210,3 +210,25 @@ cc_test(
         "@org_tensorflow//tensorflow/core:test",
     ],
 )
+
+cc_test(
+    name = "primitive_handler_test",
+    srcs = ["primitive_handler_test.cc"],
+    data = [
+        "//testdata/stu3:validation",
+    ],
+    deps = [
+        ":json_format",
+        ":primitive_handler",
+        "//cc/google/fhir:annotations",
+        "//cc/google/fhir:json_format",
+        "//cc/google/fhir:test_helper",
+        "//proto/stu3:codes_cc_proto",
+        "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:extensions_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+        "@com_google_protobuf//:protobuf",
+        "@org_tensorflow//tensorflow/core:test",
+    ],
+)
