Cleanup FHIRPath tests.
1.
Favor EvalsToTrue(), EvalsToFalse(), and EvalsToStringThatMatches() over, for example, EXPECT_TRUE(Evaluate(...).
ValueOrDie().GetBoolean().ValueOrDie()) to prevent tests from crashing when the implementation is broken. This makes debugging significantly easier. This change does not remove every instance of the described antipattern but moves us in the right direction.

2. Add better failure messages for EvalsToEmpty

3. Fix an implementation error where lexer failures would not cause a compilation error.

PiperOrigin-RevId: 297893093

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -100,6 +100,7 @@ cc_test(
         "//proto/r4/core/resources:encounter_cc_proto",
         "//proto/r4/core/resources:medication_knowledge_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
+        "//proto/r4/core/resources:organization_cc_proto",
         "//proto/r4/core/resources:parameters_cc_proto",
         "//proto/r4/core/resources:patient_cc_proto",
         "//proto/r4/core/resources:structure_definition_cc_proto",
