--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -60,6 +60,7 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
         "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
         "@org_tensorflow//tensorflow/core:lib",
     ],
@@ -192,7 +193,6 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":annotations",
-        ":resource_validation",
         "//cc/google/fhir/r4:primitive_handler",
         "//cc/google/fhir/r4:profiles",
         "//cc/google/fhir/r4:resource_validation",
@@ -261,10 +261,6 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
-        "//proto/r4:google_extensions_cc_proto",
-        "//proto/r4/core:datatypes_cc_proto",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
@@ -302,9 +298,6 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/stu3:profiles",
         "//proto:annotations_cc_proto",
-        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
