--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -135,14 +135,12 @@ cc_library(
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto:annotations_cc_proto",
         "//proto/r4:google_extensions_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/time",
         "@com_google_protobuf//:protobuf",
-        "@com_googlesource_code_re2//:re2",
         "@jsoncpp_git//:jsoncpp",
         "@org_tensorflow//tensorflow/core:lib",
     ],
@@ -163,6 +161,7 @@ cc_test(
         "//proto/r4:google_extensions_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:binary_cc_proto",
+        "//proto/r4/core/resources:observation_cc_proto",
         "//proto/r4/core/resources:patient_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
