Eliminates usages of IsFhirType, IsProfileOf, and IsTypeOrProfileOf.  These take a version-specific template argument, but return a version-independent response, which is confusing.
There are still a few usages left that are tougher to remove, so the functions have not been entirely eliminated yet.

Eliminates overly-specific and unused ExtractEncounterId util

PiperOrigin-RevId: 299436308

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -81,6 +81,7 @@ cc_library(
         ":codes",
         ":core_resource_registry",
         ":extensions",
+        ":fhir_types",
         ":proto_util",
         ":resource_validation",
         ":util",
