Add support for evaluation of FHIRPath expressions against both STU3 and R4 protos.
A separate change will follow that modifies the public API to accept a primitive handler and removes all linkages to version specific protos.

PiperOrigin-RevId: 301313712

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -41,6 +41,7 @@ cc_library(
         ":fhir_path_lexer",
         ":utils",
         "//cc/google/fhir:annotations",
+        "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:primitive_wrapper",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
@@ -90,7 +91,9 @@ cc_test(
     deps = [
         ":fhir_path",
         "//cc/google/fhir:proto_util",
+        "//cc/google/fhir/r4:primitive_handler",
         "//cc/google/fhir/status",
+        "//cc/google/fhir/stu3:primitive_handler",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/r4:uscore_cc_proto",
         "//proto/r4:uscore_codes_cc_proto",
