Make FHIRPath API more expressive and shift towards requiring a primitive handler to validate messages.
PiperOrigin-RevId: 301675810

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -53,6 +53,7 @@ cc_library(
         "//cc/google/fhir/stu3:primitive_handler",
         "//proto:annotations_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
@@ -113,33 +114,6 @@ cc_test(
         "//proto/r4/core/resources:patient_cc_proto",
         "//proto/r4/core/resources:structure_definition_cc_proto",
         "//proto/r4/core/resources:value_set_cc_proto",
-        "//proto/stu3:codes_cc_proto",
-        "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:metadatatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
-        "//proto/stu3:uscore_cc_proto",
-        "//proto/stu3:uscore_codes_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/time",
-        "@com_google_googletest//:gtest_main",
-        "@com_google_protobuf//:protobuf",
-        "@org_tensorflow//tensorflow/core:lib",
-    ],
-)
-
-cc_test(
-    name = "fhir_path_stu3_test",
-    size = "small",
-    srcs = ["fhir_path_stu3_test.cc"],
-    copts = [
-        "-fexceptions",
-    ],
-    features = ["-use_header_modules"],  # Incompatible with -fexceptions.
-    deps = [
-        "//cc/google/fhir:proto_util",
-        "//cc/google/fhir/fhir_path",
-        "//cc/google/fhir/status",
-        "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:metadatatypes_cc_proto",
