--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -368,6 +368,7 @@ cc_library(
         ":primitive_handler",
         "//cc/google/fhir:resource_validation",
         "//cc/google/fhir/fhir_path",
+        "//cc/google/fhir/fhir_path:r4_fhir_path_validation",
         "@com_google_protobuf//:protobuf",
     ],
 )
