Split FHIRPath core and FHIRPath message validation libraries into two separate BUILD rules. Also, stop including some unnecessary headers.
PiperOrigin-RevId: 304217394

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -150,10 +150,9 @@ cc_library(
     deps = [
         ":annotations",
         ":primitive_handler",
-        ":primitive_wrapper",
         ":proto_util",
         ":util",
-        "//cc/google/fhir/fhir_path",
+        "//cc/google/fhir/fhir_path:fhir_path_validation",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
